// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 expense totaling 89 1`] = `
<div>
  Viewing 
  1
   
  expense
   totaling 
  $89.00
</div>
`;

exports[`should render 2 expenses totaling 890 1`] = `
<div>
  Viewing 
  2
   
  expenses
   totaling 
  $890.00
</div>
`;
